From Iktel to iktel.nl

--- a/javascript/login-package/signup-success.handlebars
+++ b/javascript/login-package/signup-success.handlebars
@@ -8,7 +8,7 @@
             {{#if resendDetected }}
                 Controleer je spam folder als je het bericht niet kunt vinden in je inbox.
             {{else}}
-                Klik op de link in de email om je eigen Iktel gebruikersnaam en wachtwoord aan te maken.
+                Klik op de link in de email om je eigen iktel.nl gebruikersnaam en wachtwoord aan te maken.
             {{/if}}
         </div>
 
