--- a/templates/about/faq.html
+++ b/templates/about/faq.html
@@ -58,11 +58,11 @@
                 <em></em>
             </p>
             <ul>
-                <li><a href="#why">Wat is de Iktel?</a></li>
-                <li><a href="#wat">Wat maakt de Iktel totaal anders dan alle andere onderwijsmogelijkheden?</a></li>
+                <li><a href="#why">Wat is iktel.nl?</a></li>
+                <li><a href="#wat">Wat maakt iktel.nl totaal anders dan alle andere onderwijsmogelijkheden?</a></li>
                 <li><a href="#lesprogramma">Wat voor soort lesprogramma volg je?</a></li>
-                <!--<li><a href="#werkt">Hoe weet je dat de de Iktel werkt?</a></li>
-                <li><a href="#leraar">Ik ben een leraar die gebruik wil gaan maken van de Iktel in mijn klas of een ouder die zijn/haar kind wil inschrijven. Hoe pak ik dit aan?</a></li>
+                <!--<li><a href="#werkt">Hoe weet je dat de iktel.nl werkt?</a></li>
+                <li><a href="#leraar">Ik ben een leraar die gebruik wil gaan maken van iktel.nl in mijn klas of een ouder die zijn/haar kind wil inschrijven. Hoe pak ik dit aan?</a></li>
                 <li><a href="#youtube">Mijn YouTube toegang is om een bepaalde reden geblokkeerd of ik heb geen toegang tot internet op de plek waar ik ben. Is er een andre manier om bij de lesstof te komen?</a></li>
                 <li><a href="#videos">Maak je alle video's zelf?</a></li>
                 <li><a href="#vertalen">Kan ik de video's in een andere taal omzetten? Hoe pak ik dat aan?</a></li>
@@ -75,20 +75,20 @@
     </div>
     <div class="col2 forty-sixty" style="text-align: justify; padding-top: 9px;">
     
-    <a name="why"><h2>Wat is de Iktel?</h2></a>
+    <a name="why"><h2>Wat is iktel.nl?</h2></a>
     <p>
-        De Iktel is de Nederlandse versie van de Khan Academy. 
+        iktel.nl is de Nederlandse versie van de Khan Academy. 
 		Aangezien we heel enthousiast zijn over de toegevoegde waarde van de oorspronkelijke Amerikaanse versie van de Khan Academy, 
 		en we er van overtuigd zijn dat dit concept ook toepasbaar is op de Nederlandse situatie, hebben we een eigen versie ge&iuml;nstalleerd en zijn we de site gaan vertalen. 
 		Details over de techniek vindt u hier.
     </p>
-	<a name="wat"><h2>Wat maakt de Iktel totaal anders dan alle andere onderwijsmogelijkheden?</h2></a>
+	<a name="wat"><h2>Wat maakt iktel.nl totaal anders dan alle andere onderwijsmogelijkheden?</h2></a>
     <p>
         Er zijn een aantal opvallende verschillen. Met meer dan 2600 video's is het verreweg de meest uitgebreide collectie onderwijsmateriaal die op het internet beschikbaar is. De Khan Academy geeft studenten de mogelijkheid vrijwel alle leemtes in hun kennis op te vullen. Het materiaal is beschikbaar in hapklare brokken van 10 tot 20 minuten en speciaal ontwikkeld om te bekijken op een computer. Daarmee is het wezenlijk anders dan video-opnames van gewone lessen. Het relaxte taalgebruik is het tegenovergestelde van wat mensen normaal verwachten van wiskunde en science lessen. Het zijn echter juist de meest onopvallende verschillen die de filmpjes zo bijzonder maken. 
     </p>		
 	<a name="lesprogramma"><h2>Wat voor soort lesprogramma volg je?</h2></a>
     <p>
-		Eigenlijk volg ik geen lesprogramma. Ik ben ervan overtuigd dat degene die de kern van de lesstof goed begrijpt met succes onderwijs kan volgen zonder dat dat is ingebed in een lesprogramma. Om nog wat verder te gaan: ik geloof dat wie de vreugde ervaart van iets echt goed te begrijpen nooit meer tevreden zal zijn met het oppervlakkige leren waaraan de meeste studenten gewend zijn geraakt. Voor de Iktel is niets zo belangrijk als echt begrip te kweken.
+		Eigenlijk volg ik geen lesprogramma. Ik ben ervan overtuigd dat degene die de kern van de lesstof goed begrijpt met succes onderwijs kan volgen zonder dat dat is ingebed in een lesprogramma. Om nog wat verder te gaan: ik geloof dat wie de vreugde ervaart van iets echt goed te begrijpen nooit meer tevreden zal zijn met het oppervlakkige leren waaraan de meeste studenten gewend zijn geraakt. Voor iktel.nl is niets zo belangrijk als echt begrip te kweken.
 		Dat gezegd hebbende, in landelijke examens komt allerlei stof aan bod waar studenten kennis van moeten hebben om de examens met succes te kunnen afleggen. Daarom probeer ik alle mogelijke onderwerpen aan bod te laten komen.
 		</br></br>
 		Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij, een mens van vlees en bloed, gefascineerd door de wereld om mij heen. De lesstof wordt uitgelegd zoals ik het zelf begrijp niet zoals ze in een stoffig lesboek staan.
@@ -98,7 +98,7 @@
 		</br></br>
 		Ik had het gevoel dat fascinerende en prachtige concepten min of meer expres gepropt werden in vele bladzijden van slaapverwekkende teksten en eentonige, van papier opgelezen lessen. Ik zag hoe overigens slimme leeftijdgenoten onderdelen en formules van examenstof uit hun hoofd zaten te leren zonder enig idee waar het eigenlijk over ging en de lesstof dus binnen een paar weken helemaal kwijt waren. Met deze video's laat ik zien hoe die concepten eigenlijk uitgelegd hadden moeten worden, zonder daarbij concessies te doen aan de kern van de stof of de volledigheid.
 		</br></br>
-	    De Nederlandse Iktel bestaat nog maar kort, dus we hebben nog niet veel vragen ontvangen :-)</br>
+	    De Nederlandse iktel.nl bestaat nog maar kort, dus we hebben nog niet veel vragen ontvangen :-)</br>
 		Heb je een vraag die hier niet wordt beantwoord? <a href="https://www.google.com/moderator/#15/e=1d97ce&t=1d97ce.40" target="_blank">Stel 'm hier!</a>
         </br></br>
 		Heb je een vraag over een oefening? Ga dan naar die oefening en kies daar linksonder voor "Probleem melden". Op die manier weten wij meteen over welke oefening je de vraag stelt.
