--- a/templates/coach_resources/toolkit_content/instructional-strategies.html
+++ b/templates/coach_resources/toolkit_content/instructional-strategies.html
@@ -4,7 +4,7 @@
 		
 	<h1>Welke informatie kan je opvragen?</h1>
 	
-	<p><h4> Iktel houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
+	<p><h4> iktel.nl houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
 oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht van de 
 informatie die u kunt opvragen.</h4>
 
@@ -26,7 +26,7 @@ precies zien hoe uw klas dit onderwerp beheerst.<br><br>
 Door op doelen te klikken ziet u meteen welke doelen uw 
 leerlingen voor zichzelf hebben gesteld.<br><br>
 <h4>Welke informatie kunt u opvragen?</h4>
-Iktel houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
+iktel.nl houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
 oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht van de 
 informatie die u kunt opvragen.<br><br>
 <h4>Focus</h4>
