--- a/templates/coach_resources/toolkit_content/ka-classrooms.html
+++ b/templates/coach_resources/toolkit_content/ka-classrooms.html
@@ -2,10 +2,10 @@
 
 {% block col1content %}
 		
-	<h1>Waarom Iktel?</h1>
+	<h1>Waarom iktel.nl?</h1>
 	<hr>
 	
-	<p class="lead">Iktel kan je helpen een boeiend, dynamisch klaslokaal te creëren dat voorziet in de behoeften van elke leerling.</p>
+	<p class="lead">iktel.nl kan je helpen een boeiend, dynamisch klaslokaal te creëren dat voorziet in de behoeften van elke leerling.</p>
 	
 
         <p><h3>Oefeningen en video's</h3></p>
@@ -13,7 +13,7 @@
 		<ul class="bullet">
 		<li>KA genereert een <strong>onbeperkt aantal willekeurige vragen</strong> in diverse onderwerpen, variërend van optellen/aftrekken tot logaritmen. Leerlingen kunnen bij elk probleem feedback en hints krijgen. Het systeem houdt de vorderingen van leerlingen bij, zodat jij geen huiswerk meer hoeft na te kijken.</li>
 		<li>Doordat opgaven willekeurig gekozen worden, <strong>kunnen leerlingen hun huiswerk niet kopiëren.</strong></li>
-		<li>Iktel heeft op dit moment 300 Nederlandstalige oefeningen en video's, leerlingen kunnen <strong>in hun eigen tempo</strong> de stof tot zich nemen of opgaven nogmaals bekijken.</li>
+		<li>iktel.nl heeft op dit moment 300 Nederlandstalige oefeningen en video's, leerlingen kunnen <strong>in hun eigen tempo</strong> de stof tot zich nemen of opgaven nogmaals bekijken.</li>
 	</ul>
 		
         <p><h3>Data</h3></p>
@@ -30,7 +30,7 @@
 		<li>Dankzij deze vrijheid worden leerlingen in staat gesteld om onderwerpen te kiezen waaraan zij in het verleden niet zijn blootgesteld. Hierdoor zijn leerlingen <strong>meer betrokken bij hun eigen leerproces</strong></li>
 	</ul>	
 	
-	<h3>Op welke uitdagingen moet ik voorbereid zijn voordat ik Iktel in mijn klas kan gebruiken?</h3>
+	<h3>Op welke uitdagingen moet ik voorbereid zijn voordat ik iktel.nl in mijn klas kan gebruiken?</h3>
         <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/RoGgxrCsCEQ" frameborder="0" allowfullscreen></iframe></span><p>
 	<p>Met KA kunnen leerlingen in hun eigen tempo werken. Dit kan echter leiden tot extra voorbereidingstijd, waardoor je in het begin een beetje overdonderd kan worden.</p>
 		<p><strong>Voorbereidingstijd</strong>: In het begin heb je waarschijnlijk wat extra tijd nodig om de data te overzien en je planning hierop aan te passen. Een voordeel? Je hebt geen uitgebreide lesvoorbereiding meer nodig en zodra je iets meer ervaren bent met het systeem zal het je zelfs tijd besparen.</p>
