--- a/templates/coach_resources/toolkit_content/keys-to-success.html
+++ b/templates/coach_resources/toolkit_content/keys-to-success.html
@@ -5,26 +5,26 @@
 	<h1>Voor de leraar en leerling</h1>
 	<hr>
 	<p> 
-	<h2>Iktel voor leraren</h2><br>
-Het gebruik van Iktel door leraren heeft meerdere voordelen. Allereerst kunnen de 
+	<h2>iktel.nl voor leraren</h2><br>
+Het gebruik van iktel.nl door leraren heeft meerdere voordelen. Allereerst kunnen de 
 leraren hun eigen lessen opnemen op video. Het voordeel hiervan is dat een leraar niet 
 steeds dezelfde uitleg hoeft te geven; een goede video kan jaren mee. Daarnaast kunnen 
 leerlingen die moeite hebben met bepaalde stof, of die graag hun geheugen willen opfrissen 
 over bepaalde stof weer teruggrijpen op de video. Natuurlijk kunnen leerlingen de uitleg ook 
 voorafgaand aan de les bekijken, waardoor ze voorbereid zijn en gericht vragen kunnen 
 stellen over hetgeen hen nog niet duidelijks is.  In de klas ontstaat daardoor meer ruimte voor 
-verdiepingen en het geven van ondersteuning. Iktel maakt het mogelijk dat 
+verdiepingen en het geven van ondersteuning. iktel.nl maakt het mogelijk dat 
 leerlingen in hun eigen tempo werken. De oefeningen die zij maken worden automatisch 
-nagekeken en ze krijgen direct feedback over het resultaat. Omdat Iktel beschikt 
+nagekeken en ze krijgen direct feedback over het resultaat. Omdat iktel.nl beschikt 
 over een leerlingvolgsysteem heeft de leraar inzicht in hoe zijn klas ervoor staat: Welke 
 video's ze hebben bekeken, welke oefeningen hebben ze gemaakt, welke stof beheersen ze 
 en welke stof nog niet. Kortom, de leraar weet waar zijn leerlingen mee bezig zijn en kan 
 gericht helpen, precies daar waar dat nodig is.</p>
 <br>
-<h2>Iktel voor leerlingen</h2><br>
+<h2>iktel.nl voor leerlingen</h2><br>
 
-Iktel heeft verschillende voordelen voor leerlingen:
-Iktel genereert een onbeperkt aantal vragen voor leerlingen over diverse reken- 
+iktel.nl heeft verschillende voordelen voor leerlingen:
+iktel.nl genereert een onbeperkt aantal vragen voor leerlingen over diverse reken- 
 en wiskunde onderwerpen. De leerling krijgt direct feedback over of hij of zij het goede 
 antwoord heeft gegeven. Ook kunnen er hints gevraagd worden, wanneer de leerling het 
 antwoord niet direct weet. Leerlingen kunnen daarnaast ten alle tijde de video's met uitleg 
@@ -34,9 +34,9 @@ juist geen moeite hebben met een bepaald onderdeel hoeven niet naar de uitleg te
 over lesstof die zij al beheersen. Hierdoor kunnen leerlingen op hun eigen tempo werken. Dit 
 betekent dat wanneer zij een bepaald onderdeel onder de knie hebben ze door kunnen met 
 een ander onderwerp waarover ze iets willen leren. 
-Iktel biedt ook de mogelijkheid voor leerlingen om in overleg met de docent hun 
+iktel.nl biedt ook de mogelijkheid voor leerlingen om in overleg met de docent hun 
 eigen doelen stellen. Hiermee kunnen zij hun eigen schema maken.
-Voor leerlingen is de Iktel naast nuttig ook leuk. Iktel bevat allerlei 
+Voor leerlingen is iktel.nl naast nuttig ook leuk. iktel.nl bevat allerlei 
 elementen van gamification waardoor leerlingen uitgedaagd worden om meer oefeningen te 
 maken en video's te bekijken. Leerlingen kunnen badges winnen en die tentoonstellen in hun 
 prijzenkast waardoor ze anderen kunnen motiveren ook beter hun best te doen.
