--- a/templates/coach_resources/toolkit_content/setting-up-accounts.html
+++ b/templates/coach_resources/toolkit_content/setting-up-accounts.html
@@ -3,8 +3,8 @@
 {% block col1content %}
 		
 	<h1>Een klas opstarten</h1>
-	<p class="lead">Om het meeste uit Iktel te halen moet je een aantal accounts opzetten. In onze handige gids wordt uitgelegd hoe je dit het snelst kunt doen.</p>
-	<p>Om gebruik te maken van Iktel kun je inloggen met een Facebook- of Google-account. In de toekomst wordt het mogelijk om met andere, al bestaande, e-mailadressen aan te melden.</p>
+	<p class="lead">Om het meeste uit iktel.nl te halen moet je een aantal accounts opzetten. In onze handige gids wordt uitgelegd hoe je dit het snelst kunt doen.</p>
+	<p>Om gebruik te maken van iktel.nl kun je inloggen met een Facebook- of Google-account. In de toekomst wordt het mogelijk om met andere, al bestaande, e-mailadressen aan te melden.</p>
 	
 	
 	
@@ -16,7 +16,7 @@
 	
 	<h3>Een vlotte start van de klas</h3>
 	<p class="has-media"><span class="toolkit-media"><img width="100%" src="/images/toolkit/login-with-Google.png"/></span>
-	Om snel met Iktel aan de slag te kunnen, raden wij het gebruik van Google apps for education aan. Elke leerling heeft zo zijn eigen e-mailadres. (voornaam.achternaam@schoolnaam.nl)</p>
+	Om snel met iktel.nl aan de slag te kunnen, raden wij het gebruik van Google apps for education aan. Elke leerling heeft zo zijn eigen e-mailadres. (voornaam.achternaam@schoolnaam.nl)</p>
 		
         <p>Aangezien het werken met een nieuw systeem soms lastig is, staat <a href="http://dl.dropbox.com/u/33113979/KA_add_students.pdf">hier</a> beschreven hoe dat werkt. 
         <!--- <strong>TODO: add in sample document</strong></p>	--->
@@ -82,10 +82,10 @@
 		<h3>Handige links</h3>
                 <ul class="bullet">
 			<li><a href="https://dl-web.dropbox.com/get/coach%20toevoegen.pdf?w=AACcwQkNAO9ii43SUgnZWnF81f1ONjEQNQIQXVKkVYHC6w">Download de handleiding voor leerlingen "hoe een coach toe te voegen" </a></li>
-			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414069-how-can-i-add-my-class-to-khan-academy-">Hoe voeg ik mijn klas toe aan Iktel?</a></li>
+			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414069-how-can-i-add-my-class-to-khan-academy-">Hoe voeg ik mijn klas toe aan iktel.nl?</a></li>
 			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414096-we-cannot-use-gmail-or-facebook-in-our-school-how-can-we-log-in-to-khan-academy-">Hoe kan ik inloggen zonder Facebook of Google?</a></li>
 			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414103-do-you-support-any-other-ways-to-log-into-khan-academy-">Zijn er andere manieren om in te loggen?</a></li>
-			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414104-does-khan-academy-have-its-own-login-">Heeft de Iktel een eigen log-in?</a></li>
+			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414104-does-khan-academy-have-its-own-login-">Heeft iktel.nl een eigen log-in?</a></li>
 		</ul>	
 </div>
 
