--- a/templates/coach_resources/toolkit_content/toolkit-sections.html
+++ b/templates/coach_resources/toolkit_content/toolkit-sections.html
@@ -6,13 +6,13 @@
 	<hr>
 	<p class="lead">Hier volgt een korte beschrijving van de vijf onderdelen van deze toolkit</p>
 	<ul class="bullet">
-		<li><strong>Het kiezen voor KA:</strong> Begrijp de visie van de Iktel, kom erachter hoe jij Iktel kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
-		<li><strong>Aan de slag:</strong> Bepaal welke klassen Iktel kunnen gebruiken en ontdek hoe de site werkt.</li>
-		<li><strong>Klas tijd:</strong> Ontdek in welke leermethodes Iktel toegepast kan worden.</li>
+		<li><strong>Het kiezen voor KA:</strong> Begrijp de visie van iktel.nl, kom erachter hoe jij iktel.nl kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
+		<li><strong>Aan de slag:</strong> Bepaal welke klassen iktel.nl kunnen gebruiken en ontdek hoe de site werkt.</li>
+		<li><strong>Klas tijd:</strong> Ontdek in welke leermethodes iktel.nl toegepast kan worden.</li>
 		<li><strong>Curriculum:</strong> Vind hier o.a. downloadbare werkbladen.</li>
-		<li><strong>Andere bronnen:</strong> Lees onze veelgestelde vragen of stel zelf een vraag. Of lees onze blog met het laatste nieuws en ervaringen van Nederlandse Iktel-gebruikers.</li>
+		<li><strong>Andere bronnen:</strong> Lees onze veelgestelde vragen of stel zelf een vraag. Of lees onze blog met het laatste nieuws en ervaringen van Nederlandse iktel.nl-gebruikers.</li>
 	</ul>
-	<p><a href="{{base_url}}/ka-classrooms" class="call-to-action simple-button green">Volgende: Waarom Iktel? →</a></p>
+	<p><a href="{{base_url}}/ka-classrooms" class="call-to-action simple-button green">Volgende: Waarom iktel.nl? →</a></p>
 	<p>
 	<p>
 	<p>
