--- a/templates/coach_resources/view_demo.html
+++ b/templates/coach_resources/view_demo.html
@@ -9,7 +9,7 @@
     <div class="col2 fifty-fifty">
         <h2 class="main-headline" style="white-space: pre;">Demo</h2>
         <p>
-        Naast de content die de Iktel aanbiedt met de video's en oefeningen, kan een coach ook nog een hoop informatie over zijn of haar klas en/of student(en) verkrijgen. De videolink legt uit wat de mogelijkheden zijn.
+        Naast de content die iktel.nl aanbiedt met de video's en oefeningen, kan een coach ook nog een hoop informatie over zijn of haar klas en/of student(en) verkrijgen. De videolink legt uit wat de mogelijkheden zijn.
         </p>
 
         <p>
