--- a/templates/coach_resources/view_toolkit.html
+++ b/templates/coach_resources/view_toolkit.html
@@ -138,7 +138,7 @@
 	            <ul class="second-tier">
 	                <li><a href="{{base_url}}/how-to-use-this-toolkit" class="tab-link ellipsis no-recolor {% if 'how-to-use-this-toolkit' == selected_id %}active-tab{% endif %}" rel="section-1">Toolkit gebruiken</a></li>
 	                <li><a href="{{base_url}}/toolkit-sections" class="tab-link ellipsis no-recolor {% if 'toolkit-sections' == selected_id %}active-tab{% endif %}" rel="section-2">Toolkit onderdelen</a></li>
-					<li><a href="{{base_url}}/ka-classrooms" class="tab-link ellipsis no-recolor {% if 'ka-classrooms' == selected_id %}active-tab{% endif %}" rel="section-3">Waarom Iktel?</a></li>
+					<li><a href="{{base_url}}/ka-classrooms" class="tab-link ellipsis no-recolor {% if 'ka-classrooms' == selected_id %}active-tab{% endif %}" rel="section-3">Waarom iktel.nl?</a></li>
 	            </ul>
 	        </li>
 	        <li>
