--- a/templates/exercises/exercise_template.html
+++ b/templates/exercises/exercise_template.html
@@ -35,13 +35,13 @@
         {% if is_webos %}
 
         <p>
-            Onze excuses. Uw apparaat ondersteunt oefeningen maken op Iktel niet.
+            Onze excuses. Uw apparaat ondersteunt oefeningen maken op iktel.nl niet.
         </p>
 
         {% else %}
 
         <p>
-            U moet uw browser upgraden om oefeningen op Iktel te kunnen maken.
+            U moet uw browser upgraden om oefeningen op iktel.nl te kunnen maken.
         </p>
         <p>
             Wij raden u aan deze te downloaden:
@@ -58,7 +58,7 @@
 
     <div style="padding:0 9px; margin:0 1px; background: white;">
         <p style="margin-top: 0px;">
-            Dit probleem was gemaakt met een hele oude versie van Iktel en we kunnen u deze versie niet laten zien. <strong>Er is geen vooruitgang verloren geraakt</strong> Dit ongemak is alleen bij hele oude problemen, en dit zal geen huidig of toekomstig werk beïnvloeden.
+            Dit probleem was gemaakt met een hele oude versie van iktel.nl en we kunnen u deze versie niet laten zien. <strong>Er is geen vooruitgang verloren geraakt</strong> Dit ongemak is alleen bij hele oude problemen, en dit zal geen huidig of toekomstig werk beïnvloeden.
         </p>
         <p>
             Als je denkt dat dit een fout is, twijfel niet om het <a href="/reportissue?type=Defect">ons te laten weten</a>.
