--- a/templates/helpmee.html
+++ b/templates/helpmee.html
@@ -31,25 +31,25 @@
 {% block pagecontent %}
     <article id="contribute">
     	<!-- <img src="/images/help-mee-300x188.png" style="margin: 0 auto;"> -->
-    	<h2 class="section-headline">Help ook mee met de Iktel.</h2>
+    	<h2 class="section-headline">Help ook mee met iktel.nl.</h2>
     	<ul>
-    	<li>Geef feedback voor Iktel via de feedback functie. Deze vind je in de rechter onderhoek van je browser.
+    	<li>Geef feedback voor iktel.nl via de feedback functie. Deze vind je in de rechter onderhoek van je browser.
           <img src="https://lh3.googleusercontent.com/It94P3B4J1hct-FhhPOtfUObWaTr7RwQhP4D21qS5Q84vCOXrMpLvFxCEnup9c7AC4SsCc8DL4s4wYNzQYyyrvuRDnT8dcPddEtTOpsSwH5kWoNNrsKvWpw0Ow" style="text-align:right;">
         </li>
-    	<li>Maak video's voor Iktel</li>
+    	<li>Maak video's voor iktel.nl</li>
     	  <ol><p>Een filmpje maken is niet moeilijk, maar je moet wel de volgende benodigheden hebben:</p>
     	    <li>Een computer of tablet met internettoegang</li>
     	    <li>Een microfoon (vaak ingebouwd in een laptop)</li>
-    	    <li>Een YouTube-account (login kan met je Google-account die je ook nodig hebt voor de Iktel)</li>
+    	    <li>Een YouTube-account (login kan met je Google-account die je ook nodig hebt voor iktel.nl)</li>
     	    <p>We werken met de website www.screencast-o-matic.com. Zij bieden gratis software waarmee je filmpjes kunt maken van wat er op je beeldscherm gebeurt. Hierbij komt je eigen gezicht ook niet in beeld, alleen je stem en de aantekeningen in het tekenprogramma Paint worden opgenomen.</p>
-            <p>Hieronder volgt een instructiefilmpje voor het maken van filmpjes voor de Iktel</p>
+            <p>Hieronder volgt een instructiefilmpje voor het maken van filmpjes voor iktel.nl</p>
             <iframe width="560" height="315" src="http://www.youtube.com/embed/q1ho0Q10wWA" frameborder="0" allowfullscreen></iframe>
     	  </ol>
     	  <li>Ga naar <a href="wiki.iktel.nl">wiki.iktel.nl</a> en help ons het curriculum van oefeningen te verbeteren en aan te vullen.</li>
-    	  <li>Werk mee in de code om Iktel te verbeteren. Hiervoor gebruiken wij 
+    	  <li>Werk mee in de code om iktel.nl te verbeteren. Hiervoor gebruiken wij 
     	  	<a href="https://github.com/PerceptumNL">Github</a>
     	  </li>
-    	  <li>Doe een Iktel pilot op jouw school! Stuur een mailtje naar info@iktel.nl </li>
+    	  <li>Doe een iktel.nl pilot op jouw school! Stuur een mailtje naar info@iktel.nl </li>
         </ul>
         <div class="clear"></div>
     </article>
