--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -57,7 +57,7 @@
 
                     </div>
                     <h1>
-                        Welkom bij Iktel
+                        Welkom bij iktel.nl
                     </h1>
 
                     <p>
