--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     <div class="login-container card-case vertical-shadow" style="text-align:center;">
 
     <div class="providers">
-        <h3>Login op Iktel met</h3>
+        <h3>Login op iktel.nl met</h3>
         {{ login_macros.google_button(google_url) }}
 
         <br>
