--- a/templates/nl-content/contact.html
+++ b/templates/nl-content/contact.html
@@ -83,7 +83,7 @@
 	<div class="clear"></div>
 	<div class="clear"></div>
 	<div class="clear"></div>
-	<div style="text-align:center;"><p>De Nederlandse Iktel zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers<!--<a href="/contribute/credits">vrijwilligers</a>-->.</p></div>
+	<div style="text-align:center;"><p>De Nederlandse iktel.nl zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers<!--<a href="/contribute/credits">vrijwilligers</a>-->.</p></div>
 
     <p>&nbsp;</p>
 </div>
