--- a/templates/nl-content/contribute.html
+++ b/templates/nl-content/contribute.html
@@ -14,7 +14,7 @@
     <div class="col1 sixty-forty">
         <h2 class="section-headline">Help mee!</h2>
 		<p>
-			We kunnen je hulp goed gebruiken! Geloof je ook in de mogelijkheden die de Iktel biedt? Help dan mee met:</p>
+			We kunnen je hulp goed gebruiken! Geloof je ook in de mogelijkheden die iktel.nl biedt? Help dan mee met:</p>
 			<ul>
 				<li style="font-size:14px;"><a href="http://blog.iktel.nl/p/help-met-vertalen.html">het vertalen van reken- en wiskundeoefeningen</a></li>
 				<li style="font-size:14px;"><a href="http://blog.iktel.nl/p/maak-filmpjes.html">het maken van uitlegvideo's</a></li>
@@ -29,10 +29,10 @@
     <div class="col1 sixty-forty">
 			<h2>Spread the word!</h2>
 			<p>
-				Ook een goede manier om te helpen, is door anderen te vertellen over de Nederlandse Iktel.
+				Ook een goede manier om te helpen, is door anderen te vertellen over de Nederlandse iktel.nl.
 				De eerste enthousiaste gebruikers zijn er, er zijn zelfs al scholen die er gebruik van maken, maar er is eigenlijk geen enkele reden waarom  
-				niet heel Nederland leert met behulp van de Iktel.
-				Vertel je netwerk over de kracht, het nut en de mogelijkheden van de Iktel!
+				niet heel Nederland leert met behulp van iktel.nl.
+				Vertel je netwerk over de kracht, het nut en de mogelijkheden van iktel.nl!
 			</p>
 			<p>
 				<a href="http://www.facebook.com/pages/Khanacademie-NL/123650984422563" class="simple-button action-gradient social-button">
@@ -53,7 +53,7 @@
 				</a>
 			</p>
 			<p>
-			Wil jij de Iktel ook op jouw school gebruiken?
+			Wil jij iktel.nl ook op jouw school gebruiken?
 			<a href="/toolkit">Lees meer</a> en vraag jouw school een
 			<a href="/nl-content/gettingstarted.html#schools">aanmeldformulier in te sturen</a>.
 			</p>
@@ -80,7 +80,7 @@
 				<li style="font-size:14px;">een microfoon</li>
 				<li style="font-size:14px;">muis of tekentablet</li>
 				<li style="font-size:14px;">Paint of ander tekenprogramma</li>
-				<li style="font-size:14px;">YouTube account (login kan met Google account, wat je ook nodig hebt voor Iktel)</li>
+				<li style="font-size:14px;">YouTube account (login kan met Google account, wat je ook nodig hebt voor iktel.nl)</li>
 				</ul>
 			</p>
 			<p>
@@ -123,7 +123,7 @@
 	<div class="clear"></div> 
     <hr>	-->
 
-    <div style="text-align:center; padding-bottom: 18px;"><p>De Nederlandse Iktel zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers.</p></div>
+    <div style="text-align:center; padding-bottom: 18px;"><p>De Nederlandse iktel.nl zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers.</p></div>
 </article>
 {% endblock pagecontent %}
 {% block bottompagescript %}
