--- a/templates/nl-content/faq.html
+++ b/templates/nl-content/faq.html
@@ -74,12 +74,12 @@
                             <em></em>
                         </p>
                         <ul>
-                            <li><a href="#why">Wat is de Iktel?</a></li>
-                            <li><a href="#wat">Wat maakt de Iktel totaal anders dan alle andere
+                            <li><a href="#why">Wat is iktel.nl?</a></li>
+                            <li><a href="#wat">Wat maakt iktel.nl totaal anders dan alle andere
                                 onderwijsmogelijkheden?</a></li>
                             <li><a href="#lesprogramma">Wat voor soort lesprogramma volg je?</a></li>
-                            <!--<li><a href="#werkt">Hoe weet je dat de de Iktel werkt?</a></li>
-                            <li><a href="#leraar">Ik ben een leraar die gebruik wil gaan maken van de Iktel in mijn klas of een ouder die zijn/haar kind wil inschrijven. Hoe pak ik dit aan?</a></li>
+                            <!--<li><a href="#werkt">Hoe weet je dat de iktel.nl werkt?</a></li>
+                            <li><a href="#leraar">Ik ben een leraar die gebruik wil gaan maken van iktel.nl in mijn klas of een ouder die zijn/haar kind wil inschrijven. Hoe pak ik dit aan?</a></li>
                             <li><a href="#youtube">Mijn YouTube toegang is om een bepaalde reden geblokkeerd of ik heb geen toegang tot internet op de plek waar ik ben. Is er een andre manier om bij de lesstof te komen?</a></li>
                             <li><a href="#videos">Maak je alle video's zelf?</a></li>
                             <li><a href="#vertalen">Kan ik de video's in een andere taal omzetten? Hoe pak ik dat aan?</a></li>
@@ -94,17 +94,17 @@
                 <div class="col2 forty-sixty" style="text-align: justify; padding-top: 9px;">
                     <a name="why"><h2>Dit onderdeel wordt binnenkort aangevuld. Vragen kunnen altijd gesteld worden via
                         info@iktel.nl of via onze social media kanalen.</h2></a><br><br>
-                    <a name="why"><h2>Wat is de Iktel?</h2></a>
+                    <a name="why"><h2>Wat is iktel.nl?</h2></a>
 
                     <p>
-                        De Iktel is de Nederlandse versie van de Khan Academy.
+                        iktel.nl is de Nederlandse versie van de Khan Academy.
                         Aangezien we heel enthousiast zijn over de toegevoegde waarde van de oorspronkelijke Amerikaanse
                         versie van de Khan Academy,
                         en we er van overtuigd zijn dat dit concept ook toepasbaar is op de Nederlandse situatie, hebben
                         we een eigen versie ge&iuml;nstalleerd en zijn we de site gaan vertalen.
                         Details over de techniek vindt u hier.
                     </p>
-                    <a name="wat"><h2>Wat maakt de Iktel totaal anders dan alle andere
+                    <a name="wat"><h2>Wat maakt iktel.nl totaal anders dan alle andere
                         onderwijsmogelijkheden?</h2></a>
 
                     <p>
@@ -150,7 +150,7 @@
                         helemaal kwijt waren. Met deze video's laat ik zien hoe die concepten eigenlijk uitgelegd hadden
                         moeten worden, zonder daarbij concessies te doen aan de kern van de stof of de volledigheid.
                     </p>
-                    <!--<a name="werkt"><h2>Hoe weet je dat de Iktel werkt?</h2></a>
+                    <!--<a name="werkt"><h2>Hoe weet je dat iktel.nl werkt?</h2></a>
                     <p>
                         <img class="rounded-background" style="float:right;margin-left:20px;margin-bottom:10px;width:350px;" src="/images/attention.GIF">
                         <img class="rounded-background" style="float:right;clear:both;margin-left:20px;;width:350px;" src="/images/averagechart.GIF">
@@ -166,7 +166,7 @@
                         Mr. Khan, I can say without any doubt that you have changed my life and the lives of everyone in my family. </br></br>
                         I wish you and the Khan Academy the best of luck.</blockquote>
                     </p>
-                    <a name="leraar"><h2>Ik ben een leraar die gebruik wil gaan maken van de Iktel in mijn klas of een ouder die zijn/haar kind wil inschrijven. Hoe pak ik dit aan?</h2></a>
+                    <a name="leraar"><h2>Ik ben een leraar die gebruik wil gaan maken van iktel.nl in mijn klas of een ouder die zijn/haar kind wil inschrijven. Hoe pak ik dit aan?</h2></a>
                     <p>
                         Raadpleeg de <a href="/nl-content/gettingstarted.html#teachers">Aan de slag!</a> pagina.
                     </p>
@@ -189,7 +189,7 @@
 	</p>-->
                 </div>
                 <div class="clear"></div>
-                <div style="text-align:left; padding-bottom: 18px;"><p>De Nederlandse Iktel bestaat nog maar
+                <div style="text-align:left; padding-bottom: 18px;"><p>De Nederlandse iktel.nl bestaat nog maar
                     kort, dus we hebben nog niet veel vragen ontvangen :-)</br>
                     Heb je een vraag die hier niet wordt beantwoord? <a
                             href="https://www.google.com/moderator/#15/e=1d97ce&t=1d97ce.40" target="_blank">Stel 'm
