--- a/templates/stichting.html
+++ b/templates/stichting.html
@@ -4,19 +4,19 @@
 
 {% block aboutcontent %}
 <div>
-<h2 class="main-headline" style="white-space: pre;">Stichting Iktel</h2>
+<h2 class="main-headline" style="white-space: pre;">Stichting iktel.nl</h2>
 
 <h3></h3>
-<p>Iktel wordt een stichting. Dit betekent dat het platform een onafhankelijke non-profit organisatie wordt. De reden dat Iktel een stichting zal worden heeft te maken met ons ideaal van gratis online onderwijs. Wij willen dit bereiken zonder het gebruik van advertenties, omdat wij vinden dat leerlingen tijdens het leren niet blootgesteld moeten worden aan commerciële doeleinden. Toch zijn er de benodigde kosten voor het bouwen en onderhouden van dit platform en daarom willen wij werken met vrijwilligers en donateurs.
+<p>iktel.nl wordt een stichting. Dit betekent dat het platform een onafhankelijke non-profit organisatie wordt. De reden dat iktel.nl een stichting zal worden heeft te maken met ons ideaal van gratis online onderwijs. Wij willen dit bereiken zonder het gebruik van advertenties, omdat wij vinden dat leerlingen tijdens het leren niet blootgesteld moeten worden aan commerciële doeleinden. Toch zijn er de benodigde kosten voor het bouwen en onderhouden van dit platform en daarom willen wij werken met vrijwilligers en donateurs.
 </p>
 <h3>Het doel</h3>
-<p>Wij geloven in crowdsourcing. Het doel van de stichting is het creëren van een ecosysteem waarbij Iktel zichzelf in stand houdt met behulp van alle gebruikers die iets kunnen bijdragen in de zin van het aanbieden van nieuwe content of het geven van feedback op bestaande content. Zo blijft het platform up-to-date en naar wens van de gebruiker.
+<p>Wij geloven in crowdsourcing. Het doel van de stichting is het creëren van een ecosysteem waarbij iktel.nl zichzelf in stand houdt met behulp van alle gebruikers die iets kunnen bijdragen in de zin van het aanbieden van nieuwe content of het geven van feedback op bestaande content. Zo blijft het platform up-to-date en naar wens van de gebruiker.
 </p>
 <h3>Hoe kan ik hierbij helpen?</h3>
 <p>Op dit moment zijn wij op zoek naar een bestuur om de stichting in goede banen te leiden. Als bestuurslid ben jij verantwoordelijk voor de ontwikkeling van het platform, luister je naar feedback van de gebruikers en bedenk je eventuele aanpassings mogelijkheden. Dit doe je natuurlijk niet alleen, maar met een team.
 
 Voel jij je betrokken bij de ontwikkelingen in het onderwijs en wil jij hier ook je steentje aan bijdragen? Vul dan onderstaand contactformulier in, dan nemen wij contact met je op. Je kunt ook iemand voordragen door hier zijn of haar contactgegevens achter te laten.
-<a href="https://docs.google.com/forms/d/1vuq2jFUAW0d_lvzqIVJSy_WakXml_2WqdvWxmOxl5KU/viewform" target="_blank">Formulier interesse bestuur Iktel </a></p>
+<a href="https://docs.google.com/forms/d/1vuq2jFUAW0d_lvzqIVJSy_WakXml_2WqdvWxmOxl5KU/viewform" target="_blank">Formulier interesse bestuur iktel.nl </a></p>
 
 </div>
 
