--- a/templates/voorleraren.html
+++ b/templates/voorleraren.html
@@ -35,17 +35,17 @@ img {
 {% block pagecontent %}
     <article id='voorleraren'>
         <h1>Voor leraren</h1>
-        <h3>Werken met Iktel</h3>
+        <h3>Werken met iktel.nl</h3>
           <p>
-            Iktel is helemaal gratis te gebruiken. 
+            iktel.nl is helemaal gratis te gebruiken. 
             Dit past in ons doel om passend onderwijs voor iedereen mogelijk te maken. Het enige benodigde is een Google- of Facebookaccount.
             Deze zijn overigens ook gratis aan te maken.
-            Naast het gratis gebruik van Iktel kun je ook kiezen voor extra ondersteuning in de vorm van support en/of trainingen.
+            Naast het gratis gebruik van iktel.nl kun je ook kiezen voor extra ondersteuning in de vorm van support en/of trainingen.
             Hieraan zijn wel kosten gebonden. Deze worden overigens van te voren afgesproken.
           </p>
         <h3>Inloggen</h3>
           <p>
-            Iktel is door iedereen te gebruiken. 
+            iktel.nl is door iedereen te gebruiken. 
             Wil je echter inloggen en je vorderingen opslaan, dan heb je een Google- of Facebookaccount is nodig. 
             Wij raden aan om hiervoor gebruik te maken van Google Apps for Education. 
             Het gebruik hiervan is gratis en biedt de mogelijkheid om de hele klas een zelfde soort e-mail adres te geven. 
@@ -60,14 +60,14 @@ img {
             Leerlingen moeten jou eerst als coach toevoegen voordat je de ontwikkelingen van de leerling kunt volgen. Laat de leerlingen de volgende stappen doorlopen:
 
             <ol>Optie 1:
-                <li>Log in op Iktel met je eigen account</li>
-                <li>Geef iedere leerling jouw Iktel ID (dit is je e-mail loginaccount).</li>
-                <li>Laat iedere leerling zelf inloggen op zijn of haar Iktel account en laat ze naar hun eigen profielpagina gaan door rechtsboven op de naam van de leerling te klikken.</li>
-                <li>Laat de leerlingen op ‘Coaches’ klikken en voeg hier jouw Iktel ID toe.</li>
+                <li>Log in op iktel.nl met je eigen account</li>
+                <li>Geef iedere leerling jouw iktel.nl ID (dit is je e-mail loginaccount).</li>
+                <li>Laat iedere leerling zelf inloggen op zijn of haar iktel.nl account en laat ze naar hun eigen profielpagina gaan door rechtsboven op de naam van de leerling te klikken.</li>
+                <li>Laat de leerlingen op ‘Coaches’ klikken en voeg hier jouw iktel.nl ID toe.</li>
                 <li>Nu ben je coach van alle leerlingen, dat is te zien in je eigen profiel bij ‘Coach’.</li>
             </ol>
             <ol>Optie 2:
-                <li>Log in op Iktel met je eigen account</li>
+                <li>Log in op iktel.nl met je eigen account</li>
                 <li>Ga naar “Coach” en naar “Beheer leerlingen”</li>
                 <li>Voeg de emailadressen van de leerlingen toe waarvan jij coach wilt worden.</li>
                 <li>Laat de leerlingen het verzoek goedkeuren.</li>
@@ -116,7 +116,7 @@ img {
           </p>
         <h3>Dagelijks activiteiten verslag</h3>
           <p>
-            Hier zie je hoeveel tijd die er per leerling aan Iktel is besteed en aan welke sommen zij gewerkt hebben. 
+            Hier zie je hoeveel tijd die er per leerling aan iktel.nl is besteed en aan welke sommen zij gewerkt hebben. 
             Ook kun je zien hoeveel tijd zij binnen en/of buiten schooluren hebben gewerkt. 
           </p>
         <h3>Periodieke voortgang vaardigheden</h3>
@@ -131,14 +131,14 @@ img {
           </p>
         <h3>Doelen</h3>
           <p>
-            Binnen Iktel kun je werken met doelen. 
+            Binnen iktel.nl kun je werken met doelen. 
             Je kunt een leerling bijvoorbeeld het doel geven om alle video’s van breuken te gaan bekijken. 
             De leerling stelt dit dan in als doel. 
             Binnen deze tab zie je hoe ver de leerlingen met de vordering van hun doelen zijn. 
           </p>
         <h3>Zelf video’s maken en toevoegen</h3>
           <p>
-            Als docent kun je naast het gebruk van bestaande video’s ook zelf video’s opnemen en toevoegen aan Iktel. 
+            Als docent kun je naast het gebruk van bestaande video’s ook zelf video’s opnemen en toevoegen aan iktel.nl. 
             Er wordt nog een tool ontwikkeld waarmee je gemakkelijk je video kan uploaden. 
             Op dit moment vragen wij echter om in de wiki te kijken (wiki.iktel.nl). 
             Hier kun je zelf per leerdoel aangeven of je een geschikte video hebt gemaakt of er eentje weet. 
@@ -146,7 +146,7 @@ img {
           </p>
         <h3>Zelf opdrachten maken en toevoegen</h3>
           <p>
-            Iktel is nog druk bezig met verbeteren en aanvullen van de website. 
+            iktel.nl is nog druk bezig met verbeteren en aanvullen van de website. 
             We zijn zelf bezig met het ontwikkelen van nieuwe oefeningen. 
             Ook dit proces is op onze wiki te volgen. 
             Hier staan alle oefeningen aangegeven die op den duur op de site komen. 
