--- a/javascript/profile-package/username-picker.handlebars
+++ b/javascript/profile-package/username-picker.handlebars
@@ -16,7 +16,7 @@
             <div class="inputs">
                 <input type="text" value="{{nickname}}" class="nickname" id="nickname"><span class="sidenote"></span>
                 <p class="input-description">
-                    Dit is hoe jouw naam zal verschijnen op Iktel en hoe jouw vrienden en coaches je kunnen herkennen.
+                    Dit is hoe jouw naam zal verschijnen op iktel.nl en hoe jouw vrienden en coaches je kunnen herkennen.
                 </p>
             </div>
         </div>
@@ -27,10 +27,10 @@
             <div class="inputs">
                 <input type="text" value="{{username}}" class="username" id="username"><span class="sidenote"></span>
                 <p class="input-description">
-                    Jouw gebruikersnaam zal verschijnen in jouw Iktel adres.
+                    Jouw gebruikersnaam zal verschijnen in jouw iktel.nl adres.
                 </p>
                 <p class="input-description">
-                    http://www.Iktelacademie.nl/profile/<span class="example-username">{{gebruikersnaam}}</span>
+                    http://www.iktel.nlacademie.nl/profile/<span class="example-username">{{gebruikersnaam}}</span>
                 </p>
             </div>
         </div>
