--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -94,11 +94,11 @@
                 </iframe> --> <!-- src="http://www.youtube.com/embed/ewsvvVtVfmo" -->
             </div>
             <div class='open-source-blurb' style="display: inline-block; background:white; width: 460px;">
-              <h4 style="color:#0776A0; font-family:Raleway;font-size: 1.8em">Iktel <strong>open source</strong></h4>
+              <h4 style="color:#0776A0; font-family:Raleway;font-size: 1.8em">iktel.nl <strong>open source</strong></h4>
               <p style="color:black; font-family:Raleway; letter-spacing: 1.5px; font-size: 1em">
-                De Iktel is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
-                Wij willen graag dat deze Nederlandse Iktel groeit met behulp van een community van programmeurs en leraren.
-                Hierdoor kan de Iktel gratis blijven voortbestaan en wordt deze eigendom en ontwikkeld volgens de visie 
+                iktel.nl is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
+                Wij willen graag dat deze Nederlandse iktel.nl groeit met behulp van een community van programmeurs en leraren.
+                Hierdoor kan iktel.nl gratis blijven voortbestaan en wordt deze eigendom en ontwikkeld volgens de visie 
                 van de onderwijs community.</p>
                 <a href="https://github.com/PerceptumNL/KhanLatest">U kunt de code vinden in <strong>GitHub</strong></a>
             </div>
@@ -130,7 +130,7 @@
     
     <div class="social-media-banner overflow overflow-orange" >
     <a href="https://www.facebook.com/pages/iktel.nl/160771850782701"><img src="/images/social-media-icons/facebook-256.png" height="128px" width="128px"></a>
-    <a href="http://twitter.com/iktelNL"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
+    <a href="http://twitter.com/iktel.nlNL"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
     <a href="https://plus.google.com/u/0/108155339552803678462/posts"><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
 
     <a href="https://github.com/PerceptumNL"><img src="/images/social-media-icons/github-256.png" height="128px" width="128px"></a>
