--- a/templates/nl-content/gettingstarted.html
+++ b/templates/nl-content/gettingstarted.html
@@ -64,7 +64,7 @@
         <div id="faq-nav" class="col1 forty-sixty vertical-shadow visited-no-recolor">
             <h2 class="pulls">Aan de slag!</h2>
             <p id="wp1" style="margin-top: 9px;">
-                <em>Hoe benut je de Iktel optimaal</em>
+                <em>Hoe benut je iktel.nl optimaal</em>
             </p>
             <ul style="font-size: 13px;">
                 <li><a href="#students">Hoe kan ik de site gebruiken?</a></li>
@@ -99,8 +99,8 @@
     <div class="clear"></div>
     <a name="teachers"><h2>Ik ben een docent, coach of ouder, hoe kan ik de site met mijn leerlingen gebruiken?</h2></a>
     <p>
-        Allereerst heb je zelf een account nodig om in te kunnen loggen op de Iktel. Dus <a href="/login">login</a> of <a href="https://www.google.com/accounts/NewAccount">vraag een account aan</a>. 
-        Zodra je bent ingelogd op de Iktel, kun je je door leerlingen laten toevoegen als coach.
+        Allereerst heb je zelf een account nodig om in te kunnen loggen op iktel.nl. Dus <a href="/login">login</a> of <a href="https://www.google.com/accounts/NewAccount">vraag een account aan</a>. 
+        Zodra je bent ingelogd op iktel.nl, kun je je door leerlingen laten toevoegen als coach.
     </p>
     <p>
         Volgende stap: je leerlingen hebben ook een account nodig. Leerlingen ouder dan 13 jaar kunnen zelf een Google-account aanvragen. Is een leerling nog geen 13 jaar, dan heb je twee opties: 
@@ -111,7 +111,7 @@
     </p>
     <a name="schools"><h2>Ik wil graag een pilot doen op onze school, kan dat?</h2></a>
     <p>
-        Allereerst hartelijk dank voor de interesse in de Iktel. We zijn momenteel al bezig met een aantal pilot-projecten, maar zijn erg benieuwd naar meer ervaringen "in het veld". Gebruik onderstaand formulier om je aan te melden voor een pilot en we nemen contact op.
+        Allereerst hartelijk dank voor de interesse in iktel.nl. We zijn momenteel al bezig met een aantal pilot-projecten, maar zijn erg benieuwd naar meer ervaringen "in het veld". Gebruik onderstaand formulier om je aan te melden voor een pilot en we nemen contact op.
     </p>
 <div id="googleformiframe">
 <iframe src="https://docs.google.com/a/perceptum.nl/spreadsheet/embeddedform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ" width="500" height="1027" frameborder="0" marginheight="0" marginwidth="0">Bezig met laden...</iframe>
