--- a/templates/old_page_template.html
+++ b/templates/old_page_template.html
@@ -57,7 +57,7 @@
     <![endif]-->
     {{ app.globals(username, is_mobile_capable, logged_in_user_profile, user_data, server_time) }}
 
-    <title>{% block meta_page_title %}{% endblock meta_page_title %}Iktel NL</title>
+    <title>{% block meta_page_title %}{% endblock meta_page_title %}iktel.nl NL</title>
     {% if video -%}
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     {%- endif %}
@@ -69,11 +69,11 @@
 
     <meta property="fb:app_id" content="{{ App.facebook_app_id }}"/>
     <meta property="fb:admins" content="100004182250626"/>
-    <meta property="og:site_name" content="Iktel"/>
+    <meta property="og:site_name" content="iktel.nl"/>
     {% block meta_facebook_tags %}
         <meta property="og:url" content="http://www.facebook.com/khanacademie"/>
         <meta property="og:type" content="page"/>
-        <meta property="og:title" content="Iktel"/>
+        <meta property="og:title" content="iktel.nl"/>
         <meta property="og:description"
               content="Leer wat je wil, wanneer je het wil en in je eigen tempo. En ook nog eens gratis."/>
         <meta property="og:image" content="http://www.iktel.nl/images/khan-logo-header.png"/>
@@ -81,7 +81,7 @@
     {% endblock meta_facebook_tags %}
 
     {# Google+ -#}
-    <meta itemprop="name" content="Iktel">
+    <meta itemprop="name" content="iktel.nl">
     <meta itemprop="description" content="Kijk. Oefen. Leer van alles.">
     <meta itemprop="image" content="/images/khan-logo-vertical-transparent.png">
     {# End Google+ -#}
