--- a/templates/privacybeleid.html
+++ b/templates/privacybeleid.html
@@ -17,17 +17,17 @@
 
 		<h1>Privacybeleid</h1>
 		<h6>Inleiding</h6>
-		<p>Iktel hecht grote waarde aan de bescherming van de privacy van gebruikers en bezoekers van deze website. De informatie die door Iktel over u wordt verwerkt, wordt dan ook uiterst zorgvuldig behandeld en beveiligd. Iktel houdt zich hierbij strikt aan alle toepasselijke wet- en regelgeving, waaronder de Wet Bescherming Persoonsgegevens (WBP).</p>
+		<p>iktel.nl hecht grote waarde aan de bescherming van de privacy van gebruikers en bezoekers van deze website. De informatie die door iktel.nl over u wordt verwerkt, wordt dan ook uiterst zorgvuldig behandeld en beveiligd. iktel.nl houdt zich hierbij strikt aan alle toepasselijke wet- en regelgeving, waaronder de Wet Bescherming Persoonsgegevens (WBP).</p>
 
 		<h6>Persoonsgegevens</h6>
-		<p>Wanneer je gebruik maakt van de Website deel je met Iktel persoonlijke gegevens (hierna: persoonsgegevens).Denk hierbij aan je naam, e-mail adres of misschien zelfs een foto van jezelf. Wanneer je inlogt op de Website gebruik je jouw Google- of Facebook account. Je deelt dan jouw e-mailadres, of Facebook ID met Iktel. Daarnaast houdt Iktel gegevens over jouw voortgang op de Website bij. En het kan zijn dat je zelf gegevens aan je profiel hebt toegevoegd, zoals een foto. Wanneer je deze gegevens met Iktel deelt ga je ermee akkoord dat Iktel deze persoonsgegevens gebruikt en opslaat. Wanneer je inlogt op Iktel ben je voor Iktel dan ook niet meer anoniem. Deze persoonsgegevens worden door Iktel op adequate wijze beveiligd tegen onbevoegde toegang of openbaarmaking en worden opgeslagen in een bestand waarop de Wet Bescherming Persoonsgegevens (WBP) van toepassing is. Iktel zal altijd overeenkomstig de WBP handelen. Daarnaast zal Iktel de gegevens nooit zonder jouw toestemming aan derden verstrekken, tenzij Iktel daartoe op grond van de wet of een rechterlijke uitspraak verplicht is.</p>
+		<p>Wanneer je gebruik maakt van de Website deel je met iktel.nl persoonlijke gegevens (hierna: persoonsgegevens).Denk hierbij aan je naam, e-mail adres of misschien zelfs een foto van jezelf. Wanneer je inlogt op de Website gebruik je jouw Google- of Facebook account. Je deelt dan jouw e-mailadres, of Facebook ID met iktel.nl. Daarnaast houdt iktel.nl gegevens over jouw voortgang op de Website bij. En het kan zijn dat je zelf gegevens aan je profiel hebt toegevoegd, zoals een foto. Wanneer je deze gegevens met iktel.nl deelt ga je ermee akkoord dat iktel.nl deze persoonsgegevens gebruikt en opslaat. Wanneer je inlogt op iktel.nl ben je voor iktel.nl dan ook niet meer anoniem. Deze persoonsgegevens worden door iktel.nl op adequate wijze beveiligd tegen onbevoegde toegang of openbaarmaking en worden opgeslagen in een bestand waarop de Wet Bescherming Persoonsgegevens (WBP) van toepassing is. iktel.nl zal altijd overeenkomstig de WBP handelen. Daarnaast zal iktel.nl de gegevens nooit zonder jouw toestemming aan derden verstrekken, tenzij iktel.nl daartoe op grond van de wet of een rechterlijke uitspraak verplicht is.</p>
 
 		<h6>Coaches</h6>
 		<p>Wanneer jij een andere gebruiker tot jouw coach maakt, stem je ermee in dat deze persoon toegang heeft tot jouw gestelde en behaalde doelen, jouw voortgang en andere informatie over jou gebruik van de website. Je kunt een coach op elk moment weer verwijderen waardoor deze persoon geen toegang meer heeft tot jouw gegevens.</p>
 
 		<h6>Verwerkte gegevens </h6>
 		<div><p>
-		<ul style="list-style-position:inside">Iktel  verzamelt en verwerkt de volgende categorieën van persoonsgegevens:
+		<ul style="list-style-position:inside">iktel.nl  verzamelt en verwerkt de volgende categorieën van persoonsgegevens:
 			<li>Naam;</li>
 			<li>E-mailadres of Facebook ID; </li>
 			<li>Overige gegevens die je zelf toevoegt aan jouw profiel;</li>
@@ -39,7 +39,7 @@
         </p></div>
 		<h6>Doeleinden verwerking </h6>
 		<div><p>
-		<ul style="list-style-position:inside">De persoonsgegevens die je aan Iktel verstrekt worden gebruikt voor de volgende doeleinden:
+		<ul style="list-style-position:inside">De persoonsgegevens die je aan iktel.nl verstrekt worden gebruikt voor de volgende doeleinden:
 			<li>Om onze diensten aan je te verlenen zoals het maken van oefeningen en het bijhouden van je resultaten;</li>
 			<li>om een administratie bij te houden van alle bezoekers die een account aanmaken;</li>
 			<li>Om onze dienst te kunnen verbeteren;</li>
@@ -48,15 +48,15 @@
 			<li>Om fraude en misbruik te voorkomen.</li>
 		</ul>
         </p></div>
-		<p>Iktel bewaart persoonsgegevens in beginsel zolang de doeleinden dit vereisen. Daarna kunnen persoonsgegevens bewaard blijven voor archiefdoeleinden. </p>
+		<p>iktel.nl bewaart persoonsgegevens in beginsel zolang de doeleinden dit vereisen. Daarna kunnen persoonsgegevens bewaard blijven voor archiefdoeleinden. </p>
 
 		<h6>Cookies</h6>
-		<p>Iktel maakt op de Website gebruik van cookies. Dit zijn kleine tekstbestanden met informatie die een server naar jouw browser (zoals chrome, Firefox of Internet Explorer) stuurt, met de bedoeling dat deze informatie bij een volgend bezoek weer naar de server teruggestuurd wordt. Het gebruik van deze cookies is nodig om het mogelijk te maken op de Website te kunnen inloggen. Het gaat daarbij steeds om anonieme gegevens die door Iktel niet tot individuele persoonlijke gegevens te herleiden zijn. Cookies kunnen geen schade berokkenen aan je computer of de bestanden op je computer. Wanneer je bezwaar hebt tegen de plaatsing van cookies, kun je dit aangeven in de instellingen van je browser. Dit kan echter jouw gebruik van sommige onderdelen van de website in de weg staan zoals inloggen.</p>
+		<p>iktel.nl maakt op de Website gebruik van cookies. Dit zijn kleine tekstbestanden met informatie die een server naar jouw browser (zoals chrome, Firefox of Internet Explorer) stuurt, met de bedoeling dat deze informatie bij een volgend bezoek weer naar de server teruggestuurd wordt. Het gebruik van deze cookies is nodig om het mogelijk te maken op de Website te kunnen inloggen. Het gaat daarbij steeds om anonieme gegevens die door iktel.nl niet tot individuele persoonlijke gegevens te herleiden zijn. Cookies kunnen geen schade berokkenen aan je computer of de bestanden op je computer. Wanneer je bezwaar hebt tegen de plaatsing van cookies, kun je dit aangeven in de instellingen van je browser. Dit kan echter jouw gebruik van sommige onderdelen van de website in de weg staan zoals inloggen.</p>
 
 		<h6>Google Analytics</h6>
-		<p>Iktel maakt gebruik van Google Analytics, een webanalyse-service die wordt aangeboden door Google Inc. (“Google”).  Google Analytics maakt gebruik van “cookies” om de website te helpen analyseren hoe gebruikers de site gebruiken. De door het cookie gegenereerde informatie over jouw gebruik van de website (met inbegrip van jouw IP-adres) wordt overgebracht naar en door Google opgeslagen op servers in de Verenigde Staten. Google gebruikt deze informatie om bij te houden hoe u de website gebruikt, rapporten over de website-activiteit op te stellen voor website-exploitanten en andere diensten aan te bieden met betrekking tot website-activiteit en internetgebruik. Google mag deze informatie aan derden verschaffen indien Google hiertoe wettelijk wordt verplicht, of voor zover deze derden de informatie namens Google verwerken. Google zal jouw IP-adres niet combineren met andere gegevens waarover Google beschikt. Je kunt het gebruik van cookies weigeren door in jouw browser de daarvoor geëigende instellingen te kiezen. Wij wijzen je er echter op dat je in dat geval wellicht niet alle mogelijkheden van deze website kunt benutten. Door gebruik te maken van deze website geef je toestemming voor het verwerken van de informatie door Google op de wijze en voor de doeleinden zoals hiervoor omschreven.</p>
+		<p>iktel.nl maakt gebruik van Google Analytics, een webanalyse-service die wordt aangeboden door Google Inc. (“Google”).  Google Analytics maakt gebruik van “cookies” om de website te helpen analyseren hoe gebruikers de site gebruiken. De door het cookie gegenereerde informatie over jouw gebruik van de website (met inbegrip van jouw IP-adres) wordt overgebracht naar en door Google opgeslagen op servers in de Verenigde Staten. Google gebruikt deze informatie om bij te houden hoe u de website gebruikt, rapporten over de website-activiteit op te stellen voor website-exploitanten en andere diensten aan te bieden met betrekking tot website-activiteit en internetgebruik. Google mag deze informatie aan derden verschaffen indien Google hiertoe wettelijk wordt verplicht, of voor zover deze derden de informatie namens Google verwerken. Google zal jouw IP-adres niet combineren met andere gegevens waarover Google beschikt. Je kunt het gebruik van cookies weigeren door in jouw browser de daarvoor geëigende instellingen te kiezen. Wij wijzen je er echter op dat je in dat geval wellicht niet alle mogelijkheden van deze website kunt benutten. Door gebruik te maken van deze website geef je toestemming voor het verwerken van de informatie door Google op de wijze en voor de doeleinden zoals hiervoor omschreven.</p>
 		<h6>Wijzigingen</h6>
-		<p>Iktel behoudt zich het recht voor het privacybeleid te wijzigen. Wanneer wij het privacybeleid wijzigen zullen we je hierover via de blog op de Website informeren. Wij adviseren je daarnaast ook om periodiek het privacybeleid door te nemen.</p>
+		<p>iktel.nl behoudt zich het recht voor het privacybeleid te wijzigen. Wanneer wij het privacybeleid wijzigen zullen we je hierover via de blog op de Website informeren. Wij adviseren je daarnaast ook om periodiek het privacybeleid door te nemen.</p>
 
 	</div>
 </article>
